feat: add create quote functionally

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -32,7 +32,8 @@
     "director": "DIRECTOR:",
     "view quote": "view quote",
     "Edit": "Edit",
-    "Delete": "Delete"
+    "Delete": "Delete",
+    "Update Movie": "Update Movie"
   },
 
   "Profile": {
