--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -32,7 +32,8 @@
     "director": "რეჟისორი",
     "view quote": "ნახეთ ციტატა",
     "Edit": "რედაქტირება",
-    "Delete": "წაშლა"
+    "Delete": "წაშლა",
+    "Update Movie": "ფილმის რედაქტირება"
   },
 
   "Profile": {
