--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -20,17 +20,18 @@
   },
 
   "Movies": {
-    "My list of movies": "My list of movies (Total 25)",
+    "My list of movies": "My list of movies (Total {number})",
     "Search": "Search",
     "Add movie": "Add movie"
   },
 
   "SingleMovie": {
     "Movie discription": "Movie discription",
-    "Quotes (Total 7)": "Quotes (Total 7)",
+    "Quotes total": "Quotes (Total {number})",
     "Add quote": "Add quote",
     "director": "DIRECTOR:",
     "view quote": "view quote",
+    "Edit quote": "view quote",
     "Edit": "Edit",
     "Delete": "Delete",
     "Update Movie": "Update Movie"
