style: make css style better

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -31,7 +31,7 @@
     "Add quote": "Add quote",
     "director": "DIRECTOR:",
     "view quote": "view quote",
-    "Edit quote": "view quote",
+    "Edit quote": "Edit quote",
     "Edit": "Edit",
     "Delete": "Delete",
     "Update Movie": "Update Movie"
