--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -64,7 +64,7 @@
   "Header": {
     "Sign Up": "რეგისტრაცია",
     "Log In": "შესვლა",
-    "Find any quote": "მოძებნე ნებისმიერი ციტატა მილიონობით ფილმის სტრიქონში",
+    "Find any quote": "იპოვე ნებისმიერი ციტატა მილიონობით ფილმის სტრიქონში",
     "Get started": "დაიწყე"
   },
 
