feat: add update email feature and search on mobile device

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -49,12 +49,14 @@
     "Password": "Password",
     "Edit": "Edit",
     "New username": "New username",
+    "New email": "New email",
     "New password": "New password",
     "Confirm new password": "Confirm new password",
     "Passwords should contain": "Passwords should contain:",
     "8 or more characters": "8 or more characters",
     "15 lowercase character": "15 lowercase character",
     "Enter new usarname": "Enter new usarname",
+    "Enter new email": "Enter new email",
     "cancel": "cancel",
     "save changes": "save changes",
     "Are you sure to make changes": "Are you sure to make changes",
