--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -49,12 +49,14 @@
     "Password": "პაროლი",
     "Edit": "რედაქტირება",
     "New username": "ახალი სახელი",
+    "New email": "ახალი ელ-ფოსტა",
     "New password": "ახალი პაროლი",
     "Confirm new password": "გაიმეორეთ პაროლი",
     "Passwords should contain": "პაროლი უნდა შეიცავდეს:",
     "8 or more characters": "8 ან მეტ სიმბოლოს",
     "15 lowercase character": "15 დაბალი რეგისტრის სიმბოლოებს",
     "Enter new usarname": "ჩაწერეთ ახალი სახელი",
+    "Enter new email": "ჩაწერეთ ახალი ელ-ფოსტა",
     "cancel": "გამოსვლა",
     "save changes": "შენიახე ცვლილებები",
     "Are you sure to make changes": "ნამდვილად გსურთ ცვლილებების შენახვა?",
