--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,7 +4,8 @@
     "Search by": "Search by",
     "add quote placeholder": "Enter @ to search movies, Enter # to search quotes",
     "write new quote": "write new quote",
-    "Post": "Post"
+    "Post": "Post",
+    "Write a comment": "Write a comment"
   },
 
   "Sidebar": {
@@ -26,7 +27,8 @@
   "Movies": {
     "My list of movies": "My list of movies (Total {number})",
     "Search": "Search",
-    "Add movie": "Add movie"
+    "Add movie": "Add movie",
+    "No movie to show": "No movie to show"
   },
 
   "SingleMovie": {
@@ -38,7 +40,9 @@
     "Edit quote": "Edit quote",
     "Edit": "Edit",
     "Delete": "Delete",
-    "Update Movie": "Update Movie"
+    "Update Movie": "Update Movie",
+    "There are not quotes": "There are not quotes",
+    "save changes": "Save changes"
   },
 
   "Profile": {
