--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -4,7 +4,8 @@
     "Search by": "მოძებნე",
     "add quote placeholder": "ჩაწერე @ ფილმების ხოლო # ციტატების მოსაძებნად",
     "write new quote": "დაამატე ახალი ციტატა",
-    "Post": "დამატება"
+    "Post": "დამატება",
+    "Write a comment": "დააკომენტარე"
   },
 
   "Sidebar": {
@@ -26,7 +27,8 @@
   "Movies": {
     "My list of movies": "ფილმების სია (სულ {number})",
     "Search": "ძებნა",
-    "Add movie": "დაამატე ფილმი"
+    "Add movie": "დაამატე ფილმი",
+    "No movie to show": "ფილმები არ მოიძებნა"
   },
 
   "SingleMovie": {
@@ -38,7 +40,9 @@
     "view quote": "ნახეთ ციტატა",
     "Edit": "რედაქტირება",
     "Delete": "წაშლა",
-    "Update Movie": "ფილმის რედაქტირება"
+    "Update Movie": "ფილმის რედაქტირება",
+    "There are not quotes": "ციტატა არ მოიძებნა",
+    "save changes": "შეინახეთ ცვლილებები"
   },
 
   "Profile": {
