fix: delete confirmation modal translation problem

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -45,7 +45,7 @@
     "Update Movie": "Update Movie",
     "There are not quotes": "There are not quotes",
     "save changes": "Save changes",
-    "are you sure you want to delete": "დარწმუნებული ხართ რომ გინდათ წაშლა?",
+    "are you sure you want to delete": "are you sure you want to delete?",
     "cancel": "cancel",
     "delete": "delete"
   },
