--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -7,7 +7,8 @@
     "Post": "Post",
     "Write a comment": "Write a comment",
     "Nothing found": "Nothing found",
-    "No more posts to show": "No more posts to show"
+    "No more posts to show": "No more posts to show",
+    "Choose movie": "Choose movie"
   },
 
   "Sidebar": {
