--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -7,7 +7,8 @@
     "Post": "დამატება",
     "Write a comment": "დააკომენტარე",
     "Nothing found": "არაფერი მოძებნა",
-    "No more posts to show": "მეტი პოსტი აღარ არის"
+    "No more posts to show": "მეტი პოსტი აღარ არის",
+    "Choose movie": "აირჩიე ფილმი"
   },
 
   "Sidebar": {
