fix: change button colors and regex code in inputes

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -58,6 +58,7 @@
     "Email": "Email",
     "Password": "Password",
     "Edit": "Edit",
+    "confirm": "Confirm",
     "New username": "New username",
     "New email": "New email",
     "New password": "New password",
