--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -58,6 +58,7 @@
     "Email": "ელ-ფოსტა",
     "Password": "პაროლი",
     "Edit": "რედაქტირება",
+    "confirm": "დადასტურება",
     "New username": "ახალი სახელი",
     "New email": "ახალი ელ-ფოსტა",
     "New password": "ახალი პაროლი",
