style: make some style changes for better lookign

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -137,7 +137,8 @@
     "Upload image": "Upload image",
     "Drag & drop your image here or": "Drag & drop your image here or",
     "Choose file": "Choose file",
-    "replace photo": "replace photo"
+    "replace photo": "replace photo",
+    "email not found": "email not found"
   },
 
   "Forgot": {
