--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -137,7 +137,8 @@
     "Upload image": "სურათის ატვირთვა",
     "Drag & drop your image here or": "ჩააგდე სურათი ან",
     "Choose file": "არჩევა",
-    "replace photo": "შეცვალე ფოტო"
+    "replace photo": "შეცვალე ფოტო",
+    "email not found": "ელ-ფოსტა ვერ მოიძებნა"
   },
 
   "Forgot": {
